--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@
 }
 .text > p {
     color: rgb(83, 80, 80);
+    line-height: 0.8cm;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .discover-btn {
@@ -110,16 +111,29 @@
     font-weight: 500;
 }
 .introPhoto {
-    margin: 60px 0 0 0;
+    display: flex;
     flex-basis: 100%;
-    align-content: center;
+    justify-content: center;
+    margin: 60px 0 0 0;
 }
 
 .photo_bg {
-    border: 2px solid red;
-    width: 100%;
+    /* border: 2px solid red; */
+    width: 70%;
 }
 @media (min-width: 768px) {
+    .intro-me {
+        margin: -100px 0 0 0;
+    }
+    .introText {
+        flex-basis: 40%;
+        /* border: 5px solid rgb(69, 223, 156); */
+        padding: 0 40px 0 40px;
+    }
+    .text {
+        flex-basis: 30%;
+        margin: 90px 0 0 0;
+    }
     .introPhoto {
         display: flex;
         flex-basis: 60%;
@@ -127,7 +141,7 @@
     }
     .photo_bg {
         /* border: 2px solid red; */
-        width: 78%;
+        width: 60%;
         margin: auto;
     }
 }
@@ -135,58 +149,111 @@
     .intro-me {
         display: flex;
         flex-direction: row;
-        margin: 50px 0 0 0;
+        margin: 15px 0 0 0;
         justify-content: center;
-        border: 2px solid red;
+        /* border: 2px solid red; */
     }
     .introText {
         flex-basis: 40%;
-        border: 2px solid red;
+        padding: 0 0 0 0;
+        /* border: 5px solid rgb(69, 223, 156); */
+    }
+    .text {
+        flex-basis: 30%;
+        margin: 90px 0 0 0;
     }
     .introPhoto {
         display: flex;
         flex-basis: 50%;
-        border: 2px solid red;
-        justify-content: center;
+        /* border: 2px solid red; */
+        margin: 30px 0 0 0;
+        justify-content: space-around;
     }
     .photo_bg {
         /* border: 2px solid red; */
         width: 80%;
     }
 }
-@media (min-width: 1150px) {
+@media (min-width: 1200px) {
     .intro-me {
         display: flex;
         flex-direction: row;
-        margin: 80px 0 0 0;
-        justify-content: center;
-        border: 2px solid red;
+        margin: 50px 0 0 0;
+        justify-content: space-around;
+        /* border: 2px solid red; */
     }
     .introText {
-        flex-basis: 40%;
-        border: 2px solid red;
+        flex-basis: 50%;
+        padding: 0 10px 0 20px;
+        /* border: 2px solid red; */
+    }
+    .text {
+        margin: 70px 0 0 0;
     }
     .introPhoto {
         display: flex;
         flex-basis: 50%;
-        border: 2px solid red;
+        /* border: 2px solid red; */
         justify-content: center;
     }
     .photo_bg {
         /* border: 2px solid red; */
-        width: 80%;
+        width: 70%;
     }
 }
-/* .photo1 {
-    border: 3px solid black;
-    background-image: url('../images/chimao.png');
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: -40%;
-    left: 10%;
-    overflow-clip-margin: content-box;
-    overflow: clip;
-} */
 
+/* ABOUT ME */
+
+.aboutMe {
+    background-color: #ffff;
+}
+
+.about-me {
+    display: flex;
+    flex-direction: column;
+    margin: 0px 0 0 0;
+}
+
+.aboutPhoto {
+    display: flex;
+    flex-basis: 100%;
+    justify-content: center;
+    margin: 60px 0 0 0;
+}
+
+.aboutphoto_bg {
+    /* border: 2px solid red; */
+    width: 70%;
+}
+
+.aboutText {
+    margin: 60px 0 0 0;
+    display: flex;
+    flex-direction: column;
+}
+.textAboutMe {
+    padding: 0 10px 0 10px;
+}
+.textAboutMe > h1 {
+    padding: 0px 0 10px 0;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    letter-spacing: 20px;
+    font-size: 30px;
+}
+.textAboutMe > p {
+    color: rgb(83, 80, 80);
+    line-height: 0.8cm;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.fullDetails-btn {
+    font-size: 16px;
+    color: white;
+    background-color: aqua;
+    width: 150px;
+    height: 40px;
+    border-radius: 0% !important;
+}
+.fullDetails-btn:hover {
+    background-color: rgb(204, 200, 200);
+    font-weight: 500;
+}
