--- a/css/style.css
+++ b/css/style.css
@@ -5,22 +5,25 @@
 
 /* HEADER */
 .header {
-    box-shadow: 0px 10px 30px rgb(222, 219, 213);
+    background-color: white;
+    box-shadow: 0 0 10px rgb(222, 219, 213);
     position: sticky;
     top: 0;
-    z-index: 10;
+    z-index: 999;
 }
 
 .container {
     display: grid;
     grid-template-columns: auto auto;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .container > div {
     padding: 10px 0 10px 0;
         
 }
-.logo {
+.container > .logo {
+    display: flex;
+    justify-content: right;
     color: black;
     font-size: 30px;
     font-weight: bold;
@@ -160,7 +163,7 @@
     }
     .text {
         flex-basis: 30%;
-        margin: 90px 0 0 0;
+        margin: 70px 0 0 0;
     }
     .introPhoto {
         display: flex;
@@ -211,14 +214,16 @@
 .about-me {
     display: flex;
     flex-direction: column;
-    margin: 0px 0 0 0;
+    margin: 0 0 0 0;
 }
 
 .aboutPhoto {
     display: flex;
     flex-basis: 100%;
     justify-content: center;
-    margin: 60px 0 0 0;
+    /* border: 0.5px solid red; */
+    box-shadow: 0 0 10px rgb(204, 200, 200);
+    margin: 60px 20px 0 20px;
 }
 
 .aboutphoto_bg {
@@ -246,14 +251,101 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .fullDetails-btn {
-    font-size: 16px;
+    font-size: 15px;
     color: white;
     background-color: aqua;
-    width: 150px;
+    width: 160px;
     height: 40px;
     border-radius: 0% !important;
 }
 .fullDetails-btn:hover {
     background-color: rgb(204, 200, 200);
     font-weight: 500;
+}
+
+@media (min-width: 768px) {
+    .about-me {
+        margin: 40px 0 0 0;
+    }
+    .aboutText {
+        flex-basis: 40%;
+        /* border: 5px solid rgb(69, 223, 156); */
+        padding: 0 40px 0 40px;
+        margin: 0;
+    }
+    .textAboutMe {
+        flex-basis: 30%;
+        margin: 90px 0 0 0;
+    }
+    .aboutPhoto {
+        display: flex;
+        flex-basis: 60%;
+        justify-content: center;
+        box-shadow: 0 0 10px rgb(204, 200, 200);
+        margin: 0 10px 0 10px;
+    }
+    .aboutphoto_bg {
+        /* border: 2px solid red; */
+        width: 60%;
+        margin: auto;
+    }
+}
+@media (min-width: 993px) {
+    .about-me {
+        display: flex;
+        flex-direction: row;
+        margin: 15px 0 0 0;
+        justify-content: center;
+        /* border: 2px solid red; */
+    }
+    .aboutText {
+        flex-basis: 40%;
+        padding: 0 0 0 0;
+        /* border: 5px solid rgb(69, 223, 156); */
+    }
+    .textAboutMe {
+        flex-basis: 30%;
+        margin: 90px 0 0 0;
+    }
+    .aboutPhoto {
+        display: flex;
+        flex-basis: 40%;
+        /* border: 2px solid red; */
+        margin: 30px 40px 0 0;
+        justify-content: space-around;
+        box-shadow: 0 0 10px rgb(204, 200, 200);
+    }
+    .aboutphoto_bg {
+        /* border: 2px solid red; */
+        width: 80%;
+    }
+}
+@media (min-width: 1200px) {
+    .about-me {
+        display: flex;
+        flex-direction: row;
+        margin: 50px 0 0 0;
+        justify-content: space-around;
+        /* border: 2px solid red; */
+    }
+    .aboutPhoto {
+        display: flex;
+        flex-basis: 40%;
+        /* border: 2px solid red; */
+        justify-content: center;
+        box-shadow: 0 0 10px rgb(204, 200, 200);
+    }
+    .aboutphoto_bg {
+        /* border: 2px solid red; */
+        width: 70%;
+    }
+    .aboutText {
+        flex-basis: 46%;
+        padding: 0 10px 0 20px;
+        /* border: 2px solid red; */
+    }
+    .textAboutMe {
+        margin: 70px 0 0 0;
+    }
+    
 }
