--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,20 @@
         display: none;
     }
 }
-
+@media screen and (min-width: 992px) {
+    .container {
+        display: grid;
+        grid-template-columns: auto auto;
+        justify-content: space-around;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .container {
+        display: grid;
+        grid-template-columns: auto auto;
+        justify-content: space-between;
+    }
+}
 
 /* INTRO */
 
@@ -127,11 +140,13 @@
 @media (min-width: 768px) {
     .intro-me {
         margin: -100px 0 0 0;
+        display: flex;
+        flex-direction: row;
     }
     .introText {
-        flex-basis: 40%;
+        flex-basis: 50%;
         /* border: 5px solid rgb(69, 223, 156); */
-        padding: 0 40px 0 40px;
+        padding: 0 10px 0 0px;
     }
     .text {
         flex-basis: 30%;
@@ -139,16 +154,16 @@
     }
     .introPhoto {
         display: flex;
-        flex-basis: 60%;
+        flex-basis: 50%;
         justify-content: center;
     }
     .photo_bg {
         /* border: 2px solid red; */
-        width: 60%;
+        width: 100%;
         margin: auto;
     }
 }
-@media (min-width: 993px) {
+@media (min-width: 992px) {
     .intro-me {
         display: flex;
         flex-direction: row;
@@ -178,6 +193,7 @@
     }
 }
 @media (min-width: 1200px) {
+    
     .intro-me {
         display: flex;
         flex-direction: row;
@@ -222,7 +238,7 @@
     flex-basis: 100%;
     justify-content: center;
     /* border: 0.5px solid red; */
-    box-shadow: 0 0 10px rgb(204, 200, 200);
+    box-shadow: 0 0 5px rgb(243 239 239);
     margin: 60px 20px 0 20px;
 }
 
@@ -242,7 +258,7 @@
 .textAboutMe > h1 {
     padding: 0px 0 10px 0;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    letter-spacing: 20px;
+    letter-spacing: 10px;
     font-size: 30px;
 }
 .textAboutMe > p {
@@ -265,24 +281,27 @@
 
 @media (min-width: 768px) {
     .about-me {
-        margin: 40px 0 0 0;
+        margin: -10px 0 0 0;
+        display: flex;
+        flex-direction: row;
     }
     .aboutText {
-        flex-basis: 40%;
+        flex-basis: 50%;
         /* border: 5px solid rgb(69, 223, 156); */
-        padding: 0 40px 0 40px;
+        padding: 0 10px 0 40px;
         margin: 0;
     }
     .textAboutMe {
-        flex-basis: 30%;
+        flex-basis: 50%;
         margin: 90px 0 0 0;
     }
     .aboutPhoto {
         display: flex;
-        flex-basis: 60%;
+        flex-basis: 50%;
         justify-content: center;
-        box-shadow: 0 0 10px rgb(204, 200, 200);
-        margin: 0 10px 0 10px;
+        box-shadow: 0 0 5px rgb(243 239 239);
+        margin: 145px 10px 0 10px;
+        height: fit-content;
     }
     .aboutphoto_bg {
         /* border: 2px solid red; */
@@ -290,7 +309,7 @@
         margin: auto;
     }
 }
-@media (min-width: 993px) {
+@media (min-width: 992px) {
     .about-me {
         display: flex;
         flex-direction: row;
@@ -311,13 +330,13 @@
         display: flex;
         flex-basis: 40%;
         /* border: 2px solid red; */
-        margin: 30px 40px 0 0;
+        margin: 110px 40px 0 0;
         justify-content: space-around;
-        box-shadow: 0 0 10px rgb(204, 200, 200);
+        box-shadow: 0 0 5px rgb(243 239 239);
     }
     .aboutphoto_bg {
         /* border: 2px solid red; */
-        width: 80%;
+        width: 55%;
     }
 }
 @media (min-width: 1200px) {
@@ -330,14 +349,15 @@
     }
     .aboutPhoto {
         display: flex;
-        flex-basis: 40%;
+        flex-basis: 35%;
         /* border: 2px solid red; */
         justify-content: center;
-        box-shadow: 0 0 10px rgb(204, 200, 200);
+        box-shadow: 0 0 5px rgb(243 239 239);
+        margin: 76px 0 0 0;
     }
     .aboutphoto_bg {
         /* border: 2px solid red; */
-        width: 70%;
+        width: 50%;
     }
     .aboutText {
         flex-basis: 46%;
