--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
     margin: 0;
 }
 
+body h1 h2 h3 h4 h5 h6 {
+    font-family: "Poppins", sans-serif;
+}
+
 /* HEADER */
 .header {
     background-color: white;
@@ -368,4 +372,39 @@
         margin: 70px 0 0 0;
     }
     
+}
+
+/* SERVICES */
+
+.services {
+    margin: 60px 0 0 0;
+}
+
+.service1 {
+    margin: 0 0 60px 0;
+    padding: 0 20px 0 20px;
+}
+
+.myIcon {
+    width: 3.5rem;
+    height: 3.5rem;
+}
+
+@media screen and (min-width: 768px) {
+    .services {
+        margin: 90px 0 0 0;
+    }
+    .service1 {
+        margin: 0 0 60px 0;
+        padding: 0 50px 0 50px;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .services {
+        margin: 120px 0 0 0;
+    }
+    .service1 {
+        margin: 0 0 60px 0;
+        padding: 0 150px 0 150px;
+    }
 }
